# flutter_rust_bridge

./: .all-contributors-custom.yaml  .all-contributorsrc  .codacy.yaml  .codacy.yml  .dockerignore  .editorconfig  .fvmrc  .gitignore  .gitmodules  .nightly_msrv  .tool-versions  404.html  ASYNC_IN_RUST.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  SECURITY.md.lnk  _Cargo.toml  advanced.html  analysis_options.yaml  article.html  build_wasm.html  clippy.toml  codecov.yml  command_line.html  doIt.sh  feature.html  feature_details.html  frb_internal  frb_internal.bat  gen.sh  guides.html  head  help.serve.txt  help.txt  (+29 more)
dart_rust_bridge_codegen/: Cargo.toml
dart_rust_bridge_codegen/src/: commands.rs  generator_common.rs  generator_dart.rs  generator_rust.rs  main.rs  others.rs  transformer.rs  utils.rs
dart_rust_bridge_example/dart_rust_bridge_example_rust/: Cargo.toml
dart_rust_bridge_example/dart_rust_bridge_example_rust/src/: generated_wire.rs
dart_sys/: Cargo.toml  build.rs  readme.md
dart_sys/bindgen/: wrapper.h
dart_sys/examples/: async.rs  readme.md  sync.rs
dart_sys/src/: lib.rs  tests.rs
frb_codegen/: .clippy.toml  .gitmodules  Cargo.toml  README.md
frb_codegen/assets/integration_template/: .flutter_rust_bridge.yaml  flutter_rust_bridge.yaml
frb_codegen/contrib/: flutter_rust_bridge_codegen.json  scoop.json.sh
frb_codegen/src/: api_types.rs  commands.rs  config.rs  consts.rs  dump.rs  error.rs  generate_c.rs  generator_c.rs  generator_common.rs  generator_dart.rs  generator_rust.rs  lib.rs  logs.rs  main.rs  markers.rs  method_utils.rs  others.rs  parser.rs  source_graph.rs  target.rs  tools.rs  transformer.rs  utils.rs
frb_codegen/src/attributes/: mod.rs  module.rs
frb_codegen/src/binary/: commands.rs  commands_parser.rs  mod.rs  test_utils.rs
frb_codegen/src/cli/: commands.rs  commands_parser.rs  mod.rs
frb_codegen/src/codegen/: mod.rs
frb_codegen/src/commands/: error.rs
frb_codegen/src/common/: mod.rs  test_utils.rs
frb_codegen/src/config/: error.rs  mod.rs  opts.rs  opts_parser.rs  raw_opts.rs  raw_opts_parser.rs  refine_c_output.rs
frb_codegen/src/entrypoint/: dart.rs  mod.rs  rust.rs
frb_codegen/src/integration/: mod.rs
frb_codegen/src/ir/: annotation.rs  comment.rs  field.rs  file.rs  func.rs  ident.rs  import.rs  mod.rs  ty.rs  ty_boxed.rs  ty_dart_opaque.rs  ty_datetime.rs  ty_delegate.rs  ty_dynamic.rs  ty_enum.rs  ty_general_list.rs  ty_opaque.rs  ty_optional.rs  ty_optional_list.rs  ty_primitive.rs  ty_primitive_list.rs  ty_record.rs  ty_rust_opaque.rs  ty_struct.rs  ty_sync_return.rs  ty_type_impl_trait.rs  ty_unencodable.rs
frb_codegen/src/old/: commands.rs  dump.rs  lib.rs  main.rs  others.rs  target.rs  transformer.rs
frb_codegen/src/parser/: error.rs  markers.rs  mod.rs  source_graph.rs  ty.rs
frb_codegen/src/source_graph/: mod.rs  source_graph.rs
frb_codegen/src/utils/: command_runner.rs  consts.rs  generate_template.rs  method.rs  misc.rs  mod.rs  parse_sig_from_lib.rs  tools.rs
frb_dart/bindgen/: Cargo.toml  cbindgen.toml  io_dartcobject.h
frb_dart/bindgen/src/: lib.rs  main.rs
frb_example/benches/rust/: Cargo.toml  Cargo.toml.release  build.rs
frb_example/complex/rust/: Cargo.toml  flutter_rust_bridge.yaml
frb_example/dart_build_rs/rust/: Cargo.toml  build.rs
frb_example/dart_logging/rust/: Cargo.toml
frb_example/dart_minimal/rust/: Cargo.toml  build.rs
frb_example/flutter_via_create/rust/: Cargo.toml  build.rs
frb_example/gallery/rust/: Cargo.toml
frb_example/integrate_third_party/rust/: Cargo.toml
frb_example/no_rust_async/rust/: Cargo.toml
frb_example/pure_dart/rust/: .flutter_rust_bridge.yml  Cargo.toml  Cargo.toml.release  build.rs  flutter_rust_bridge.yaml
frb_example/pure_dart_multi/rust/: .flutter_rust_bridge.yml  Cargo.toml  Cargo.toml.release  build.rs  c_output_2.h
frb_example/pure_dart_pde/rust/: Cargo.toml
frb_example/temp_demo/: Cargo.toml  pubspec.yaml
frb_example/temp_demo/src/: demo_mine.rs  demo_ouroboros.rs  demo_self_cell.rs  demo_yoke.rs  main.rs  user_code.rs
frb_example/temp_demo/test/: temp_demo_test.dart
frb_example/with_flutter/rust/: Cargo.toml  Cargo.toml.release  build.rs  flutter_rust_bridge.yaml
frb_macros/: Cargo.toml  README.md
frb_macros/src/: lib.rs
frb_macros/src/components/: attr_external.rs  attr_ui_state.rs  converter.rs  encoder.rs  mod.rs  stripper.rs
frb_rust/: Cargo.toml  Cargo.toml.release  README.md  build.rs
frb_rust/.cargo/: config.toml
frb_rust/frb_macros/: .gitignore  Cargo.toml
frb_rust/src/: dart_api.rs  executor.rs  ffi.rs  for_generated.rs  handler.rs  into_into_dart.rs  lib.rs  macros.rs  opaque.rs  pool.rs  rust2dart.rs  rust_async.rs  support.rs  thread.rs
frb_rust/src/api2wire/: mod.rs  stream_sink.rs
frb_rust/src/codec/: cst.rs  dco.rs  mod.rs  sse.rs
frb_rust/src/dart_api/: README.md  dart_api.h
frb_rust/src/dart_api_dl/: trampoline.c
frb_rust/src/dart_fn/: handler.rs  mod.rs
frb_rust/src/dart_opaque/: action.rs  auto_drop_dart_persistent_handle.rs  dart2rust.rs  dart_persistent_handle_auto_drop.rs  guarded_box.rs  io.rs  mod.rs  non_clone.rs  rust2dart.rs  thread_box.rs  web.rs
frb_rust/src/ffi/: dart_api.rs  io.rs  mod.rs  web.rs
frb_rust/src/ffi_binding/: io.rs  mod.rs  web.rs
frb_rust/src/for_generated/: boilerplate.rs  boilerplate_io.rs  boilerplate_web.rs  cast.rs  misc.rs  misc_rust_async.rs  mod.rs  pointer.rs
frb_rust/src/generalized_arc/: base_arc.rs  map_based_arc.rs  mod.rs  moi_arc.rs  std_arc.rs
frb_rust/src/generalized_isolate/: io.rs  mod.rs
frb_rust/src/handler/: error.rs  error_handler.rs  error_listener.rs  executor.rs  handler.rs  mod.rs
frb_rust/src/internal_generated/: mod.rs
frb_rust/src/lifetimeable/: dependency.rs  lifetime_changer.rs  mod.rs
frb_rust/src/misc/: mod.rs  (+19 more)
frb_rust/tests/: frb_logging_test.rs
frb_rust_bindgen_io/: Cargo.toml  cbindgen.toml
frb_rust_bindgen_io/src/: main.rs
temp/ezstr/: .gitignore  Cargo.toml
temp/jazz-chord/: .gitignore  Cargo.toml  LICENSE.md  README.md
(+6996 files in other folders)
