[workspace]
members = [
  "frb_codegen",
  "frb_rust",
  "frb_macros",
  "frb_example/pure_dart/rust",
  "frb_example/pure_dart_multi/rust",
  "frb_example/with_flutter/rust",
]

[workspace.package]
version = "1.82.5"
edition = "2018"
license = "MIT"
description = "High-level memory-safe binding generator for Flutter/Dart <-> Rust"
repository = "https://github.com/fzyzcjy/flutter_rust_bridge"
keywords = ["flutter", "dart", "ffi", "code-generation", "bindings"]
categories = ["development-tools::ffi"]

[workspace.dependencies]
allo-isolate = { version = "0.1.19", features = ["anyhow"] }
anyhow = "1.0.64"
chrono = "0.4.23"
lazy_static = "1.4.0"
uuid = "1.1.2"
thiserror = "1.0"
backtrace = "0.3.68"

flutter_rust_bridge_macros = { path = "frb_macros", version = "1" }
flutter_rust_bridge = { path = "frb_rust", default-features = false, version = "1" }
flutter_rust_bridge_codegen = { path = "frb_codegen", version = "1" }

[profile.release.package.flutter_rust_bridge_codegen]
strip = "debuginfo"
debug = 1 # preserves some debug information
