[package]
name = "dart_rust_bridge_codegen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.77", features = ["full", "extra-traits"] }
quote = "1.0"
regex = "1.5.4"
lazy_static = "1.4.0"
convert_case = "0.4.0"
tempfile = "3.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4"
env_logger = "0.9.0"