[package]
name = "dart_sys"
version = "2.0.1"
# authors = ["Patrik Buhring <patrikbuhring@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "Bindings to the dart native extensions api"
# repository = "https://github.com/OptimisticPeach/dart-sys"
readme = "readme.md"
keywords = ["dart", "native", "extension", "extensions"]
categories = ["no-std", "development-tools::ffi", "external-ffi-bindings"]

[dependencies]

[dev-dependencies]
rand = "0.7.2"
libc = "0.2.62"
lazy_static = "1.4.0"

[build-dependencies]
#bindgen = "0.51.1"

[features]
docs-only = []

[package.metadata.docs.rs]
features = ["docs-only"]

[[example]]
name = "async"
crate-type = ["cdylib"]

[[example]]
name = "sync"
crate-type = ["cdylib"]
