[package]
name = "flutter_rust_bridge_macros"
version = "1.38.0"
edition = "2018"
description = "Supporting procedural macros for flutter_rust_bridge"
license = "MIT"
repository = "https://github.com/fzyzcjy/flutter_rust_bridge"
keywords = ["flutter", "dart", "ffi", "code-generation", "bindings"]
categories = ["development-tools::ffi"]

[dependencies]

[lib]
proc-macro = true
