[package]
name = "flutter_rust_bridge_macros"
version.workspace = true
edition.workspace = true
description = "Supporting procedural macros for flutter_rust_bridge"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hex = "0.4.3"
syn = { version = "2.0.26", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.70"
md-5 = "0.10.6"

[lib]
proc-macro = true
