[package]
name = "flutter_rust_bridge"
edition = "2024"
rust-version = "1.96.0"
version = "2.13.0"
description = "Flutter/Dart <-> Rust binding generator, feature-rich, but seamless and simple"
license = "MIT"
repository = "https://github.com/kumsumit/flutter_rust_bridge_rust"
keywords = ["flutter", "dart", "ffi", "code-generation", "bindings"]
categories = ["development-tools::ffi"]

[dependencies]
anyhow = { version = "1.0.103", optional = true }
backtrace = { version = "0.3.75", optional = true }
byteorder = "1.5.0"
chrono = { version = "0.4.45", optional = true }
delegate-attr = "0.3.0"
flutter_rust_bridge_macros = { path = "frb_macros", version = "=2.13.0" }
futures = { version = "0.3.31", optional = true }
lazy_static = "1.5.0"
log = { version = "0.4", optional = true }
portable-atomic = { version = "1.11.0", optional = true }
serde_json = { version = "1.0", optional = true }
uuid = { version = "1.23.4", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
allo-isolate = { version = "0.1.26", features = ["anyhow", "backtrace", "zero-copy"] }
dart-sys = { version = "4.1.5", optional = true }
threadpool = { version = "1.8.1", optional = true }
tokio = { version = "1.52.3", optional = true, features = ["rt-multi-thread", "sync"] }

[target.'cfg(target_family = "wasm")'.dependencies]
bytemuck = "1.23.1"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = { version = "0.3.77" }
tokio = { version = "1.52.3", optional = true, features = ["sync"] }
wasm-bindgen = { version = "0.2.100" }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
web-sys = { version = "0.3.77", features = [
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "MessagePort",
    "ErrorEvent",
    "Blob",
    "BlobPropertyBag",
    "Worker",
    "Url",
    "BroadcastChannel",
] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.15", optional = true }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
oslog = { version = "0.2.0", optional = true }

[build-dependencies]
build-target = "0.8.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.32"
cool_asserts = "2.0.3"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync", "macros"] }

[features]
default = [
    "anyhow",
    "dart-opaque",
    "log",
    "portable-atomic",
    "rust-async",
    "thread-pool",
    "user-utils",
    "wasm-start",
]
backtrace = ["dep:backtrace", "allo-isolate/backtrace"]
chrono = ["dep:chrono", "allo-isolate/chrono"]
dart-opaque = ["dep:dart-sys"]
portable-atomic = ["dep:portable-atomic"]
rust-async = ["dep:tokio", "dep:futures", "dep:wasm-bindgen-futures"]
thread-pool = ["dep:threadpool"]
user-utils = ["dep:android_logger", "dep:oslog"]
serde_json = ["dep:serde_json"]
uuid = ["dep:uuid", "allo-isolate/uuid"]
wasm-start = ["console_error_panic_hook"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
