[package]
name = "dart_rust_bridge_example"
version = "0.1.0"
edition = "2018"

[lib]
name = "dart_rust_bridge_example"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.44", features = ["backtrace"] }
dart_rust_bridge = { path = "../../dart_rust_bridge_rust" }
