[package]
name = "frb_dart_bindgen"
publish = false
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
allo-isolate = { workspace = true }
dunce = "1.0.3"
