[package]
name = "ezstr"
version = "0.3.1"
edition = "2024"
description = "A String wrapper supporting negative indexing with grapheme indexing for slices and Regex::find_iter and Regex::find"
license = "MIT"

[dependencies]
unicode-segmentation = "1.12.0"
regex = "1.11.2"
once_cell = "1.21.3"

[workspace]
