[package]
name = "flutter_rust_bridge_example_benchmark_suite"
version = "1.0.0"
edition.workspace = true

[lib]
name = "flutter_rust_bridge_example_benchmark_suite"
crate-type = ["cdylib"]

[build-dependencies]
flutter_rust_bridge_codegen = { workspace = true, features = [
  "chrono",
  "uuid",
] }

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
chrono = { workspace = true }
flutter_rust_bridge = { workspace = true, features = ["chrono", "uuid"] }
lazy_static = { workspace = true }
serde_json = "1"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
uuid = { workspace = true }
