[package]
name = "flutter_rust_bridge_example_benchmark_suite"
version = "1.0.0"
edition.workspace = true

[lib]
name = "flutter_rust_bridge_example_benchmark_suite"
crate-type = ["cdylib"]

[build-dependencies]
flutter_rust_bridge_codegen = { workspace = true, features = [
  "chrono",
  "uuid",
] }

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
chrono = { workspace = true }
criterion = { version = "0.4", default-features = false }
flutter_rust_bridge = { workspace = true, features = ["chrono", "uuid"] }
lazy_static = { workspace = true }
serde_json = "1"
uuid = { workspace = true, features = ["v4","js"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = { version = "0.1.7" }
js-sys = { version = "0.3.60" }
wasm-bindgen = { version = "0.2.81" }
web-sys = { version = "0.3.58", features = ["console"] }
