[package]
name = "frb_example_dart_logging"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = { path = "../../../frb_rust" }
# Optional - can be removed if you do not want logging
log = "^0.4.20"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
