[package]
name = "frb_example_dart_minimal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = { path = "../../../frb_rust" }
log = "0.4.20"  # Optional - can be removed if you do not want logging
chrono = "0.4.23"  # Optional - can be removed if you do not want logging (needed only for the default log output)