[package]
name = "frb_example_dart_minimal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = { path = "../../../frb_rust", default-features = false, features = [
    "anyhow",
    # Deliberately remove this feature to ensure frb can work without it
    # "dart-opaque",
    "log",
    "portable-atomic",
    "rust-async",
    "thread-pool",
    "user-utils",
    "wasm-start",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[features]
default = ["dart-opaque"]
dart-opaque = ["flutter_rust_bridge/dart-opaque"]