[package]
name = "rust_lib_flutter_via_create"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { path = "../../../frb_rust" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
log = "0.4.22"
