[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { path = "../../../frb_rust" }
anyhow = { version = "1.0.98", features = ["backtrace"] }
num = "0.4"
image = "0.25.6"
crossbeam = "0.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
