[package]
name = "rust_lib_frb_example_integrate_third_party"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { path = "../../../frb_rust" }
web-audio-api = { version = "1.0.0-rc.6", default-features = false }
extend = "1.2.0"
anyhow = "1.0.86"
paste = "1.0.15"
delegate-attr = "0.3.0"
