[package]
name = "no_rust_async"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# rust-async is intentionally disabled
flutter_rust_bridge = { path = "../../../frb_rust", default-features = false, features = ["anyhow", "user-utils", "dart-opaque", "thread-pool"] }
tokio = { version = "1.45", features = ["rt", "rt-multi-thread"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
