[package]
name = "frb_example_pure_dart"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
flutter_rust_bridge = { workspace = true }
log = "0.4.19"
backtrace = "0.3.68"
chrono = "0.4.26"
uuid = "1.4.1"
frb_example_pure_dart_exapmle_external_lib = { path = "./example_external_lib" }