[package]
name = "flutter_rust_bridge_example_multi_blocks_test"
version = "1.0.0"
edition = "2018"

[lib]
name = "flutter_rust_bridge_example_pure_dart_multi"
crate-type = ["cdylib"]

[features]
c-output = []
extra-c-output-path = []

[build-dependencies]
flutter_rust_bridge_codegen = { workspace = true }

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
flutter_rust_bridge = { workspace = true, features = ["chrono"] }
lazy_static = { workspace = true }

# [dependencies.external-lib] # used for demo of external types mirroring
# path = "./external"
# package = "flutter_rust_bridge_example_external"
