[package]
name = "frb_example_pure_dart_pde"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.64", features = ["backtrace"] }
flutter_rust_bridge = { path = "../../../frb_rust", features = ["chrono", "uuid", "backtrace"] }
log = "0.4.19"
backtrace = "0.3.68"
chrono = "0.4.26"
uuid = "1.4.1"
frb_example_pure_dart_example_external_lib = { path = "./example_external_lib" }
wasm-bindgen = "0.2.88" # TODO temp experiment
byteorder = "1.5.0"
lazy_static = "1.4.0"
tempfile = "3.8.1"
futures = "0.3.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Only used for comparison test
protobuf = "=2.28.0" # Only used for comparison test
tokio = { version = "1.34.0", features = ["rt"] }
