[package]
name = "rust_lib_jazz_chord_demo_user"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { path = "../../../frb_rust" }
jazz_chord = { path = "../../jazz-chord" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[workspace]
